configurando spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=Viniciuscruz07
 
 # Mostrar as consultas SQL no console
 spring.jpa.show-sql=true
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
