--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=easy-finance
-# URL de conexão com o banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/easy_finance
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# Nome de usuário do PostgreSQL
-spring.datasource.username=postgres
-
-# Senha do banco de dados PostgreSQL
-spring.datasource.password=Viniciuscruz07
-
-# Mostrar as consultas SQL no console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
